# test_rx

./: .clang-format  CMakeLists.txt  LICENSE  main.cpp
docker/: Dockerfile  docker-compose.yml
heat_distribution/: CMakeLists.txt  main.cpp
qt_example/: CMakeLists.txt
qt_example/include/: DoubleLineEditSubject.h  MainWindow.h
qt_example/src/: DoubleLineEditSubject.cpp  MainWindow.cpp  main.cpp
